# calorcheeky-curator

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
prompts/: README.md
prompts/photo/: README.md
prompts/recipe-ideas/: cases.json
prompts/text/: cases.json
prompts/translate/: cases.json
proposals/UA-2026-05/: pack.json  report.md
proposals/UA-2026-05-removed-asparagus/: pack.json
scripts/: check-wire.sh  fetch-pack.sh  pack-history.sh  publish-pack.sh  verify-publish.sh
scripts/eval/: README.md  extract-prod.sh  run-eval.sh  summarize.sh
scripts/eval/prompts/: advise-system-uk-clause.txt  advise-system.txt  advise-units-clause.txt  image-rules.txt  ingredient-system-uk-clause.txt  ingredient-system.txt  max-tokens.json  meal-system-uk-clause.txt  meal-system.txt  models.json  recipe-system-uk-clause.txt  recipe-system.txt  translate-system.txt  variant-explainer.txt
scripts/eval/schemas/: advise_recipe_ideas.json  define_ingredient.json  define_recipe.json  log_food.json  translate_products.json
src/: app.py  client.py  diff.py  models.py  prompts.py  proposer.py
tests/: test_diff.py
