[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name            = "calorcheeky-curator"
version         = "0.1.0"
description     = "AI-driven seasonal seed-pack curator for the Calorcheeky cloud server."
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "Proprietary" }
authors         = [{ name = "Andrii Romaniuk" }]

dependencies = [
    # Streamlit drives the UI. v1.40+ has the `st.data_editor` improvements
    # we use for the per-row review table; older versions work but with
    # rougher edges.
    "streamlit>=1.40,<2.0",
    # Anthropic Python SDK for the AI proposer (web_search tool support
    # ships in 0.40+).
    "anthropic>=0.40,<1.0",
    # Sync HTTP client for talking to the cloud server. httpx over
    # requests because we may async-ify later (e.g. parallel pack
    # publishes for multiple countries).
    "httpx>=0.27,<1.0",
    # pydantic for the wire DTOs — same shape as the server's
    # @Serializable Kotlin classes.
    "pydantic>=2.6,<3.0",
    # python-dotenv to read .env locally (Streamlit doesn't auto-load).
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<1.0",
]

[project.scripts]
# Convenience: `calorcheeky-curator` from the venv runs Streamlit
# pointed at our app entry. Users who prefer `streamlit run src/app.py`
# can keep doing that — this just saves the typing.
calorcheeky-curator = "app:cli_main"

[tool.setuptools.packages.find]
where   = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
# Default rules + a few extras: pycodestyle, pyflakes, isort, bugbear.
select = ["E", "F", "I", "B", "UP"]
